--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.9.0",
     "jwt-decode": "^3.1.2",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
